# XenoGenesis-Sim

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: alien_life.yaml  demo_life.yaml
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/ca/: ca_stepper.cpp
cpp/common/: metrics.cpp  rng.cpp
cpp/include/xenogenesis/: ca_stepper.hpp  metrics.hpp  rng.hpp  softbody_stub.hpp
demo/: alien_life.yaml  life_demo.yaml
demo/media/: README.md
scripts/: install_ubuntu.sh  profile_ca.sh  run_demo.sh
src/xenogenesis/: __init__.py  cli.py
src/xenogenesis/analysis/: __init__.py  phylogeny.py  plots.py  report.py  species.py
src/xenogenesis/config/: __init__.py  defaults.yaml  schema.py
src/xenogenesis/core/: profiling.py  rng.py  types.py  units.py
src/xenogenesis/engine/: checkpointing.py  lineage.py  metrics.py  parallel.py  sim_runner.py
src/xenogenesis/evolution/: __init__.py  deap_bridge.py  novelty.py  selection.py  speciation.py  variation.py
src/xenogenesis/examples/: run_ca_demo.py  run_ecosystem_demo.py  run_softbody_demo.py
src/xenogenesis/substrates/ca/: __init__.py  ca_model.py  fitness.py  genome.py  kernels.py  render.py
src/xenogenesis/substrates/digital/: __init__.py  fitness.py  genome.py  instruction_vm.py
src/xenogenesis/substrates/softbody/: __init__.py  controller_neat.py  envs.py  fitness.py  morph_genome.py
src/xenogenesis/ui/: live_ui.py
src/xenogenesis/world/: __init__.py  hazards.py  planet.py  resources.py  terrain.py
tests/: conftest.py  test_ca_fitness.py  test_ca_stepper_equivalence.py  test_checkpoint_resume.py  test_determinism.py  test_genome_decode.py  test_smoke_cli.py  test_structured_genome.py
