[build-system]
requires = [
  "scikit-build-core>=0.9.1",
  "pybind11>=2.10",
  "numpy",
  "setuptools",
  "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "xenogenesis-sim"
version = "0.1.0"
authors = [{ name = "XenoGenesis Team" }]
description = "Alien evolution sandbox with CA, soft-body, and digital substrates"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
  "typer>=0.9",
  "numpy>=1.24",
  "pydantic>=2.5",
  "pyyaml",
  "deap>=1.3",
  "pandas>=2.1",
  "polars>=0.19",
  "matplotlib>=3.7",
  "ffmpeg-python>=0.2",
  "rich>=13.0",
  "networkx>=3.2",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
evogym = ["evogym>=1.0"]
neat = ["neat-python>=0.92"]

[project.scripts]
xenogenesis = "xenogenesis.cli:app"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
install.components = ["python"]

[tool.scikit-build.cmake]
version = ">=3.18"

[tool.cibuildwheel]
skip = "pp* *musllinux*"
